<resources>
    <string name="app_name">Overlay</string>
    <string name="menu_home_camera">Camera</string>
    <string name="menu_home_gallery">Gallery</string>
    <string name="menu_home_store">Store</string>
    <string name="menu_home_setting">Setting</string>
    <string name="menu_edit_text">Text</string>
    <string name="menu_edit_overlay">Overlay</string>
    <string name="menu_edit_stickers">Stickers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="percent_max_seekbar">100%</string>
    <string name="add">Add</string>
    <string name="color">Color</string>
    <string name="transparency">Transparency</string>
    <string name="text_size">Text size</string>
    <string name="double_click_input_text">double_click_input_text</string>
</resources>