<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_home">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_112"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/app_name_text"
            android:textSize="@dimen/text_size_40"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/camera"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <ImageView
                android:id="@+id/img_camera"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/img_camera"
                app:layout_constraintStart_toStartOf="@id/img_camera"
                app:layout_constraintTop_toBottomOf="@id/img_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gallery"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/store"
            app:layout_constraintStart_toEndOf="@id/camera"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <ImageView
                android:id="@+id/img_gallery"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:src="@drawable/ic_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/img_gallery"
                app:layout_constraintStart_toStartOf="@id/img_gallery"
                app:layout_constraintTop_toBottomOf="@id/img_gallery" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/store"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/setting"
            app:layout_constraintStart_toEndOf="@id/gallery"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <ImageView
                android:id="@+id/img_store"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_store"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/img_store"
                app:layout_constraintStart_toStartOf="@id/img_store"
                app:layout_constraintTop_toBottomOf="@id/img_store" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setting"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/store"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/img_setting"
                app:layout_constraintStart_toStartOf="@id/img_setting"
                app:layout_constraintTop_toBottomOf="@id/img_setting" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_listImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginTop="@dimen/size_4"
            android:layout_marginBottom="@dimen/size_8"
            android:padding="@dimen/size_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>